# react-native-turbo-db

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SecureDB.podspec  TurboDB.podspec  package-lock.json  package.json  react-native-secure-db-0.1.0.tgz  react-native-secure-db.podspec  react-native.config.js  tsconfig.json
android/: CMakeLists.txt  build.gradle  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: SecureCryptoAndroid.cpp  SecureCryptoAndroid.h  SecureDBModule.cpp  TurboDBModule.cpp
android/src/main/java/com/securedb/: KeyStoreManager.java  NativeSecureDBSpec.java  SecureDBModule.java
android/src/main/java/com/turbodb/: KeyStoreManager.java
cpp/: ArenaAllocator.h  BinarySerializer.cpp  BinarySerializer.h  BufferedBTree.cpp  BufferedBTree.h  BufferedDataStore.cpp  BufferedDataStore.h  CachedCryptoContext.h  Compactor.cpp  Compactor.h  Compression.cpp  Compression.h  DBEngine.cpp  DBEngine.h  DBScheduler.cpp  DBScheduler.h  HMACProvider.cpp  HMACProvider.h  MMapRegion.cpp  MMapRegion.h  PersistentBPlusTree.cpp  PersistentBPlusTree.h  SecureCryptoContext.h  SecureDBImpl.cpp  SecureDBImpl.h  SodiumCryptoContext.cpp  SodiumCryptoContext.h  TurboDBError.h  ValueCache.cpp  ValueCache.h  WALManager.cpp  WALManager.h
docs/: INTERNAL_ALGORITHMS.md
example/: README.md  app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/JSIStorageExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/JSIStorageExample.xcodeproj/: project.pbxproj
example/ios/JSIStorageExample.xcworkspace/: contents.xcworkspacedata
example/ios/TurboDBExample.xcodeproj/: project.pbxproj
example/src/: App.tsx  SyncPage.tsx
ios/: DBEngineInstaller.mm  KeyManagerIOS.h  KeyManagerIOS.mm  OnLoad.mm  SecureCryptoIOS.h  SecureCryptoIOS.mm  SecureDBImpl.mm  SecureDBInstaller.mm  TurboDBImpl.mm  TurboDBInstaller.mm
ios/folly/coro/: Coroutine.h
scripts/: rn_turbo_db_post_install.rb
src/: NativeSecureDB.ts  NativeTurboDB.ts  SyncManager.ts  TurboDBError.ts  index.tsx  index.web.ts
src/__tests__/: AdvancedAPI.test.ts  BasicAPI.test.ts  CriticalAPI.test.ts  EnterpriseAPI.test.ts  MediumAPI.test.ts  ProAPI.test.ts  SecureDB.test.ts  TurboDB.test.ts  index.test.tsx
(+3 files in other folders)
